--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
             <div id="Hero_section">
                 <div id="hero_text">
                     <h1>Host your website in less than 5 minutes.</h1>
-                    <p>With Hosterr, get you website up and running in no less than 5 minutes with the most competitive
+                    <p>With Hosterr, get your website up and running in no less than 5 minutes with the most competitive
                         pricing packages available online.</p>
                 </div>
                 <div id="email">
@@ -80,11 +80,11 @@
 
                 <li onclick="window.location.href='#'">Instagram</li>
 
-                <li onclick="window.location.href='#'"">Twitter</li>
+                <li onclick="window.location.href='#'">Twitter</li>
             </ul>
         </div>
 
-        <div id=" CTA">
+        <div id="CTA">
                     <div id="cta_avatar">
                         <img src="Assets/Help-Avatar.svg" alt="Help Avatar">
                     </div>
